fix overflowing

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -92,7 +92,7 @@
 
   /* ===== scrollbar ===== */
   html {
-    overflow-y: scroll;
+    /* overflow-y: scroll; */
   }
 
   /* width */
